test_suite/tests/ui/conflict/flatten-skip-serializing.stderr
error: #[serde(flatten] can not be combined with #[serde(skip_serializing)]
 --> $DIR/flatten-skip-serializing.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

